assets/css/custom.css
/* assets/css/custom.css */
.background-cover {
  background: url('../img/background.png') no-repeat center center fixed;
  background-size: cover;
}

#layout {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#layout #layout-content {
  min-width: 0;
  flex-grow: 1;
}

#layout #layout-footer {
  min-width: 0;
}

input::-ms-clear, input::-ms-reveal {
  display: none;
}

.employee-photo {
  width: 4rem;
  height: 4rem;
  display: inline-block;
  background-color: #fff;
}

.photo-2x {
  width: 8rem;
  height: 8rem;
}

.text-mars {
  color: #02a3fe;
}

.text-venus {
  color: #ec49a6;
}

.banner {
  padding: 1.5rem 1.5rem 4.5rem;
  width: 100%;
  border-radius: 0 0 20px 20px;
}

.image-container {
  position: relative;
  max-width: 64px;
  margin: 0 auto;
}

.sex-sign {
  position: absolute;
  bottom: -5px;
  right: -12px;
  width: 32px;
  height: 32px;
}

.toggled .menu-item {
  margin: 0 auto;
}

